--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul class="nav-links">
                 <li class="nav-item"><a href="#home">Home</a></li>
                 <li class="nav-item"><a href="#about">About</a></li>
-                <li class="nav-item"><a href="#Previous-experience">Previous experience</a></li>
+                <li class="nav-item"><a href="#Previous-experience">Previous Experience</a></li>
                 <li class="nav-item"><a href="#projects">Projects</a></li>
                 <li class="nav-item"><a href="#contact">Get in Touch</a></li>
                 <!-- 其他自己想加的區塊 -->
@@ -85,7 +85,7 @@
         </div>
     </section>
     <section id="Previous-experience">
-        <h2>Previous experience</h2>
+        <h2>Previous Experience</h2>
         <div class="pe-horizontal">
             <div class="class-list">
                <ul>
